fixed model not visible and model resize issues

--- a/static/css/model_container.css
+++ b/static/css/model_container.css
@@ -9,6 +9,7 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
+
 }
 
 .modal-content {
@@ -17,6 +18,7 @@
     padding: 20px;
     border: 1px solid #888;
     width: 90%; /* Could be more or less, depending on screen size */
+    height: 90%;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
@@ -38,8 +40,9 @@
 
 #3d-container {
     width: 100%;
-    height: 500px;
+    height: 100%;
     margin: 0 auto;
+    position: relative;
     border: 1px solid #ccc;
 }
 
